Agregar unidades de tiempo

--- a/index.html
+++ b/index.html
@@ -72,6 +72,40 @@
             </form>
             <h4 class="displayResult" id="displayResult-masa">Resultado</h4>
         </div>
+        <h1 class="convertidor-title">Convertir unidades de tiempo</h1>
+        <div class="convertidor-tiempo">
+            <form class="form" id="form-tiempo">
+                <label for="options-tiempo-1">Convertir de:</label> 
+                <input type="number" id="option-number-tiempo">
+                <select id="options-tiempo-1" class="options">
+                    <option value="milenio">Milenio(s)</option>
+                    <option value="siglo">Siglo(s)</option>
+                    <option value="decada">Década(s)</option>
+                    <option value="año">Año(s)</option>
+                    <option value="mes">Mes(es)</option>
+                    <option value="semana">Semana(s)</option>
+                    <option value="d">Día(s)</option>
+                    <option value="h">Hora(s)</option>
+                    <option value="min">Minuto(s)</option>
+                    <option value="s">Segundo(s)</option>
+                </select>
+                <label for="options-tiempo-2">a:</label>
+                <select id="options-tiempo-2" class="options">
+                    <option value="milenio">Milenio(s)</option>
+                    <option value="siglo">Siglo(s)</option>
+                    <option value="decada">Década(s)</option>
+                    <option value="año">Año(s)</option>
+                    <option value="mes">Mes(es)</option>
+                    <option value="semana">Semana(s)</option>
+                    <option value="d">Día(s)</option>
+                    <option value="h">Hora(s)</option>
+                    <option value="min">Minuto(s)</option>
+                    <option value="s">Segundo(s)</option>
+                </select>
+                <button type="submit" class="btn">Convertir</button>
+            </form>
+            <h4 class="displayResult" id="displayResult-tiempo">Resultado</h4>
+        </div>
     </div>
     <!--SCRIPTS-->
     <script src="/scripts/convertidor.js"></script>
