--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/convertidor.css">
+    <link rel="stylesheet" href="/styles/footer.css">
 </head>
 <body>
     <header>
@@ -106,6 +107,9 @@
             </form>
             <h4 class="displayResult" id="displayResult-tiempo">Resultado</h4>
         </div>
+        <footer class="footer">
+            <h3>© 2021 <a href="https://github.com/Alex22-SV/Convertidor-de-unidades-de-medida/blob/main/LICENSE" target="_blank">Alex22-SV</a></h3>
+        </footer>
     </div>
     <!--SCRIPTS-->
     <script src="/scripts/convertidor.js"></script>
