Actualizar footer, agregar unidades de medida e intro

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <label class="logo">Alex22-SV</label>
         </nav>
     </header>
+    <section class="intro">
+        <h1 class="title">Convertidor de unidades de medida</h1>
+        <p class="desc">Con esta página web te ayudaremos a convertir las unidades de medida (al menos las más principales). Si hay alguna unidad de medida que no está disponible en nuestra página puedes pedirnos que agreguemos esa unidad de medida <a href="https://github.com/Alex22-SV/Convertidor-de-unidades-de-medida/issues" target="_blank">aquí</a>, para ello necesitarás una cuenta creada en GitHub.</p>
+    </section>
     <div class="convertidor">
         <h1 class="convertidor-title">Convertir unidades de longitud</h1>
         <div class="convertidor-longitud">
@@ -107,11 +111,32 @@
             </form>
             <h4 class="displayResult" id="displayResult-tiempo">Resultado</h4>
         </div>
+        <h1 class="convertidor-title">Convertir unidades de temperatura</h1>
+        <div class="convertidor-temperatura">
+            <form class="form" id="form-temperatura">
+                <label for="options-temperatura-1">Convertir de:</label> 
+                <input type="number" id="option-number-temperatura">
+                <select id="options-temperatura-1" class="options">
+                    <option value="K">Kelvin (K)</option>
+                    <option value="°C">Grados Celsius (°C)</option>
+                    <option value="°F">Grados Fahrenheit (°F)</option>
+                </select>
+                <label for="options-temperatura-2">a:</label>
+                <select id="options-temperatura-2" class="options">
+                    <option value="K">Kelvin (K)</option>
+                    <option value="°C">Grados Celsius (°C)</option>
+                    <option value="°F">Grados Fahrenheit (°F)</option>
+                </select>
+                <button type="submit" class="btn">Convertir</button>
+            </form>
+            <h4 class="displayResult" id="displayResult-temperatura">Resultado</h4>
+        </div>
         <footer class="footer">
-            <h3>© 2022 <a href="https://github.com/Alex22-SV/Convertidor-de-unidades-de-medida/blob/main/LICENSE" target="_blank">Alex22-SV</a></h3>
+            
         </footer>
     </div>
     <!--SCRIPTS-->
     <script src="/scripts/convertidor.js"></script>
+    <script src="/scripts/footer.js"></script>
 </body>
 </html>
